--- a/basetoolslibrary/src/main/AndroidManifest.xml
+++ b/basetoolslibrary/src/main/AndroidManifest.xml
@@ -1,11 +1,10 @@
-<manifest package="com.excellence.basegridadapterlibrary"
+<manifest package="com.excellence.basetoolslibrary"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        >
+        android:supportsRtl="true">
 
     </application>
 
