--- a/basetoolslibrary/build.gradle
+++ b/basetoolslibrary/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 23
@@ -28,4 +29,13 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:23.4.0'
     testCompile 'junit:junit:4.12'
+}
+
+publish {
+    userOrg = 'veizhang'
+    groupId = 'com.excellence'
+    artifactId = 'BaseTools'
+    publishVersion = '1.0.0'
+    desc = '通用的适配器'
+    website = 'https://github.com/VeiZhang/BaseToolsLibrary'
 }
