--- a/tooldemo/src/main/AndroidManifest.xml
+++ b/tooldemo/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.excellence.baseadapterlibrary"
+<manifest package="com.excellence.tooldemo"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
@@ -8,12 +8,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.excellence.baseadapterlibrary.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".AdapterActivity">
         </activity>
     </application>
 
