添加RecyclerView的示例

--- a/tooldemo/src/main/AndroidManifest.xml
+++ b/tooldemo/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".AdapterActivity">
+        <activity android:name=".GridAdapterActivity">
+        </activity>
+        <activity android:name=".RecyclerAdapterActivity">
         </activity>
     </application>
 
