--- a/basetoolslibrary/src/main/AndroidManifest.xml
+++ b/basetoolslibrary/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest package="com.excellence.basetoolslibrary"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.GET_TASKS"/>
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
