1.修改工程编码为UTF-8，解决GBK编码在编译时提示的乱码警告 2.解决中文注释：编码GBK的不可映射字符 3.上传Bintray时，避免Javadocs的异常错误

--- a/basetoolslibrary/build.gradle
+++ b/basetoolslibrary/build.gradle
@@ -31,18 +31,18 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.2.1'
 }
 
-/** ÉÏ´«BintrayÊ±Javadoc±àÒë´íÎó**/
+/**é¿å…Javadocsé”™è¯¯:æ‰¾ä¸åˆ°å¼•ç”¨**/
 tasks.withType(Javadoc) {
     options.addStringOption('Xdoclint:none', '-quiet')
-    options.addStringOption('encoding', 'GBK')
+    options.addStringOption('encoding', 'UTF-8')
 }
 
-/**·¢²¼µ½ÎÒµÄBintray²Ö¿â**/
+/**å‘å¸ƒåˆ°æˆ‘çš„Bintrayä»“åº“**/
 publish {
     userOrg = 'veizhang'
     groupId = 'com.excellence'
     artifactId = 'BaseTools'
     publishVersion = '1.1.1'
-    desc = 'Í¨ÓÃÊÊÅäÆ÷'
+    desc = 'é€šç”¨é€‚é…å™¨'
     website = 'https://github.com/VeiZhang/BaseToolsLibrary'
 }
