--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,15 @@ allprojects {
     repositories {
         jcenter()
     }
+
+    /**避免中文注释:编码GBK的不可映射字符**/
+    tasks.withType(Javadoc) {
+        options{
+            encoding "UTF-8"
+            charSet 'UTF-8'
+            links "http://docs.oracle.com/javase/7/docs/api"
+        }
+    }
 }
 
 task clean(type: Delete) {
