--- a/tooldemo/build.gradle
+++ b/tooldemo/build.gradle
@@ -31,7 +31,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.2.1'
     /**可以使用远程库或者使用本地Module Library*/
     /**远程库**/
-    // compile 'com.excellence:BaseTools:1.1.1'
+    // compile 'com.excellence:BaseTools:1.2.0'
+    /**或者使用+，自动使用最新依赖包**/
+    // compile 'com.excellence:BaseTools:+'
     /**本地Library**/
     compile project(':basetoolslibrary')
 }
