--- a/basetoolslibrary/build.gradle
+++ b/basetoolslibrary/build.gradle
@@ -41,8 +41,8 @@ tasks.withType(Javadoc) {
 publish {
     userOrg = 'veizhang'
     groupId = 'com.excellence'
-    artifactId = 'BaseTools'
-    publishVersion = '1.2.0'
-    desc = '通用适配器'
+    artifactId = 'basetools'
+    publishVersion = '1.1.0'
+    desc = 'Android通用适配器和常用的工具类'
     website = 'https://github.com/VeiZhang/BaseToolsLibrary'
 }
