添加Gridview、Listview多布局通用适配器

--- a/tooldemo/src/main/AndroidManifest.xml
+++ b/tooldemo/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         </activity>
         <activity android:name=".RecyclerAdapterActivity">
         </activity>
+        <activity android:name=".MultiItemAdapterActivity">
+        </activity>
     </application>
 
 </manifest>
