--- a/tooldemo/src/main/AndroidManifest.xml
+++ b/tooldemo/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         </activity>
         <activity android:name=".MultiItemAdapterActivity">
         </activity>
+        <activity android:name=".MultiItemRecyclerAdapterActivity">
+        </activity>
     </application>
 
 </manifest>
