新增ViewPager通用适配器以及示例

--- a/tooldemo/src/main/AndroidManifest.xml
+++ b/tooldemo/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         </activity>
         <activity android:name=".MultiItemRecyclerAdapterActivity">
         </activity>
+        <activity android:name=".ViewPagerAdapterActivity">
+        </activity>
     </application>
 
 </manifest>
