新增DataBinding通用适配器

--- a/basetoolslibrary/build.gradle
+++ b/basetoolslibrary/build.gradle
@@ -20,7 +20,7 @@ allprojects {
 
     /**避免中文注释:编码GBK的不可映射字符**/
     tasks.withType(Javadoc) {
-        options{
+        options {
             encoding "UTF-8"
             charSet 'UTF-8'
             links "http://docs.oracle.com/javase/7/docs/api"
@@ -50,6 +50,10 @@ android {
 
     lintOptions {
         abortOnError false
+    }
+
+    dataBinding {
+        enabled true
     }
 }
 
