--- a/tooldemo/src/main/AndroidManifest.xml
+++ b/tooldemo/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
         </activity>
         <activity android:name=".ViewPagerAdapterActivity">
         </activity>
+        <activity android:name=".databinding.CommonBindingAdapterActivity">
+        </activity>
+        <activity android:name=".databinding.MultiItemTypeBindingAdapterActivity">
+        </activity>
     </application>
 
 </manifest>
