--- a/tooldemo/build.gradle
+++ b/tooldemo/build.gradle
@@ -34,9 +34,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.0.0'
     /**可以使用远程库或者使用本地Module Library*/
     /**远程库**/
-    // compile 'com.excellence:basetools:1.2.3'
+    compile 'com.excellence:basetools:1.2.4'
     /**或者使用+，自动使用最新依赖包**/
     // compile 'com.excellence:basetools:+'
     /**本地Library**/
-    compile project(':basetoolslibrary')
+    // compile project(':basetoolslibrary')
 }
