--- a/tooldemo/build.gradle
+++ b/tooldemo/build.gradle
@@ -1,37 +1,12 @@
-apply plugin: 'com.android.application'
+apply from: '../application.gradle'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
-
     defaultConfig {
         applicationId "com.excellence.tooldemo"
-        minSdkVersion 15
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-    dataBinding {
-        enabled true
     }
 }
 
 dependencies {
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:recyclerview-v7:25.0.0'
     /**可以使用远程库或者使用本地Module Library*/
     /**远程库**/
     // compile 'com.excellence:basetools:_latestVersion'
