--- a/basetoolslibrary/src/main/AndroidManifest.xml
+++ b/basetoolslibrary/src/main/AndroidManifest.xml
@@ -1,6 +1,14 @@
 <manifest package="com.excellence.basetoolslibrary"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.GET_TASKS"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
