--- a/basetoolslibrary/src/main/AndroidManifest.xml
+++ b/basetoolslibrary/src/main/AndroidManifest.xml
@@ -15,6 +15,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
 
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <!--元数据-->
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
+
     </application>
 
 </manifest>
