--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-/.gradle
-/.idea
-build
 *.iml
+.gradle
 /local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+/.idea
+/gradle.properties
+/gradlew
+/gradlew.bat
