优化读取版本信息

--- a/config.gradle
+++ b/config.gradle
@@ -118,7 +118,10 @@ def getVersionName() {
     if (version == 0) {
         version = 1
     }
-    return "1.0.${version} [${date}]"
+    /**
+     * 错误的版本信息，请检查
+     */
+    return "0.${version} [${date}]"
 }
 
 /**
