--- a/basetoolslibrary/build.gradle
+++ b/basetoolslibrary/build.gradle
@@ -1,14 +1,18 @@
-apply plugin: 'com.android.library'
+def plugins = rootProject.ext.plugins
+def cfg = rootProject.ext.android
+def libs = rootProject.ext.dependencies
+
+apply plugin: plugins.library
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion cfg.compileSdkVersion
+    buildToolsVersion cfg.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion cfg.minSdkVersion
+        targetSdkVersion cfg.targetSdkVersion
+        versionCode cfg.versionCode
+        versionName cfg.versionName
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -33,72 +37,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.0.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:recyclerview-v7:25.0.0'
-}
-
-/*********************上传jCenter依赖*********************/
-apply plugin: 'com.novoda.bintray-release'
-
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.novoda:bintray-release:0.8.0'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
-
-/**避免中文注释:编码GBK的不可映射字符**/
-tasks.withType(Javadoc) {
-    options {
-        encoding "UTF-8"
-        charSet 'UTF-8'
-        links "http://docs.oracle.com/javase/7/docs/api"
-    }
-}
-
-/**避免Javadocs错误:找不到引用**/
-tasks.withType(Javadoc) {
-    options.addStringOption('Xdoclint:none', '-quiet')
-    options.addStringOption('encoding', 'UTF-8')
-}
-
-/**发布到我的Bintray仓库**/
-def user = getPropertyValue('bintrayUser')
-def key = getPropertyValue('bintrayKey')
-def org = getPropertyValue('userOrg')
-
-publish {
-    bintrayUser = user
-    bintrayKey = key
-    dryRun = false
-    userOrg = org
-    groupId = 'com.excellence'
-    artifactId = 'basetools'
-    publishVersion = '1.2.6'
-    desc = 'Android通用适配器和常用的工具类'
-    website = 'https://github.com/VeiZhang/BaseToolsLibrary'
-    licences = ['Apache-2.0']
-}
-
-/**读取bintray.key文件的key**/
-def getPropertyValue(String key) {
-    if (key == null || key.length() == 0)
-        return null
-
-    File file = project.rootProject.file('../../bintray.key')
-    if (!file.exists())
-        return null
-
-    InputStream inputStream = file.newDataInputStream()
-    Properties properties = new Properties()
-    properties.load(inputStream)
-
-    //读取Key
-    return properties.getProperty(key)
+    compile libs["appcompat-v7"]
+    compile libs["recyclerview-v7"]
 }
