--- a/config.gradle
+++ b/config.gradle
@@ -19,8 +19,8 @@ ext {
             /*************************原生配置*************************/
             compileSdkVersion       : 25,
             buildToolsVersion       : "25.0.0",
-            minSdkVersion           : 17,
-            targetSdkVersion        : 23,
+            minSdkVersion           : 15,
+            targetSdkVersion        : 19,
             versionCode             : getVersionCode(),
             versionName             : getVersionName(),
 
@@ -38,7 +38,7 @@ ext {
             "design"             : "com.android.support:design:${android["androidSupportSdkVersion"]}",
             "annotations"        : "com.android.support:support-annotations:${android["androidSupportSdkVersion"]}",
             "gridlayout-v7"      : "com.android.support:gridlayout-v7:${android["androidSupportSdkVersion"]}",
-            "constraint-layout"  : "com.android.support.constraint:constraint-layout:1.0.2",
+            "constraint-layout"  : "com.android.support.constraint:constraint-layout:1.1.2",
 
             /*************************第三方依赖*************************/
             // https://github.com/square/retrofit
@@ -68,9 +68,9 @@ ext {
             "volley"             : "com.android.volley:volley:1.1.1",
             // https://github.com/ReactiveX/RxJava
             "rxjava"             : "io.reactivex:rxjava:1.3.8",
-            "rxjava2"            : "io.reactivex.rxjava2:rxjava:2.2.2",
+            "rxjava2"            : "io.reactivex.rxjava2:rxjava:2.2.3",
             "rxandroid"          : "io.reactivex:rxandroid:2.1.0",
-            "rxandroid2"         : 'io.reactivex.rxjava2:rxandroid:2.0.2',
+            "rxandroid2"         : 'io.reactivex.rxjava2:rxandroid:2.1.0',
             // https://github.com/JakeWharton/RxBinding
             "rxbinding"          : 'com.jakewharton.rxbinding2:rxbinding:2.2.0',
             // https://github.com/google/gson
@@ -85,6 +85,8 @@ ext {
             "leakcanary-fragment": "com.squareup.leakcanary:leakcanary-support-fragment:1.6.2",
             // https://github.com/YoKeyword/Fragmentation
             "fragmentation"      : "me.yokeyword:fragmentation:1.3.6",
+            // https://github.com/airbnb/lottie-android，2.8.0+是为了兼容AndroidX，没有用到AndroidX，则使用版本2.7.0，否则莫名其妙会报错
+            "lottie"             : "com.airbnb.android:lottie:2.7.0",
 
             /*************************个人依赖*************************/
             // https://github.com/VeiZhang/BaseToolsLibrary
@@ -93,6 +95,7 @@ ext {
             "permission"         : "com.excellence:permission:1.0.1",
             // https://github.com/VeiZhang/RetrofitClient
             "retrofit-client"    : "com.excellence:retrofit:1.0.5",
+            "retrofit-client2"   : "com.excellence.retrofit:retrofit2:2.0.0",
             // https://github.com/VeiZhang/QSkinLoader
             "skinloader"         : "com.excellence:skinloader:1.2.2",
             // https://github.com/VeiZhang/ToastKit
@@ -104,7 +107,7 @@ ext {
             // https://github.com/VeiZhang/AppStatistics
             "app-statistics"     : "com.excellence:app-statistics:1.0.1",
             // https://github.com/VeiZhang/AndroidExec
-            "exec"               : "com.excellence:exec:1.1.0",
+            "exec"               : "com.excellence:exec:1.1.1",
             // https://github.com/VeiZhang/AndroidFFmpeg
             "ffmpeg"             : "com.excellence:ffmpeg:1.1.0",
             // https://github.com/VeiZhang/ImageLoader
@@ -175,7 +178,7 @@ def getVersionCode() {
  */
 def getGitTag() {
     try {
-        def process = ("git describe --abbrev=0 --tags").execute()
+        def process = ("git describe --abbrev=0 --tags origin").execute()
         def tag = process.text.trim()
         return tag
     } catch (e) {
@@ -185,12 +188,12 @@ def getGitTag() {
 }
 
 /**
- * 以git tag的数量作为其版本号
+ * 以git提交的数量作为其版本号
  * @return tag的数量
  */
 def getGitVersionCode() {
     try {
-        def process = ("git rev-list HEAD --first-parent --count").execute()
+        def process = ("git rev-list --all --count").execute()
         def version = process.text.trim().toInteger()
         return version
     } catch (e) {
