--- a/basetoolslibrary/build.gradle
+++ b/basetoolslibrary/build.gradle
@@ -37,9 +37,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
-    compile libs["appcompat-v7"]
-    compile libs["recyclerview-v7"]
+    testImplementation 'junit:junit:4.12'
+    api libs["androidx-appcompat"]
+    implementation libs["leanback"]
 }
 
 apply from: 'bintray.gradle'
