--- a/config.gradle
+++ b/config.gradle
@@ -17,104 +17,125 @@ ext {
     // 配置
     android = [
             /*************************原生配置*************************/
-            compileSdkVersion       : 25,
-            buildToolsVersion       : "25.0.0",
+            compileSdkVersion       : 28,
+            buildToolsVersion       : "28.0.0",
             minSdkVersion           : 15,
             targetSdkVersion        : 19,
             versionCode             : getVersionCode(),
             versionName             : getVersionName(),
 
             /*************************自定义配置*************************/
-            androidSupportSdkVersion: "23.0.0"
+            androidSupportSdkVersion: "28.0.0"
     ]
 
     // 依赖
     dependencies = [
             /*************************原生依赖*************************/
-            "appcompat-v7"       : "com.android.support:appcompat-v7:${android["androidSupportSdkVersion"]}",
-            "support-v4"         : "com.android.support:support-v4:${android["androidSupportSdkVersion"]}",
-            "cardview-v7"        : "com.android.support:cardview-v7:${android["androidSupportSdkVersion"]}",
-            "recyclerview-v7"    : "com.android.support:recyclerview-v7:${android["androidSupportSdkVersion"]}",
-            "design"             : "com.android.support:design:${android["androidSupportSdkVersion"]}",
-            "annotations"        : "com.android.support:support-annotations:${android["androidSupportSdkVersion"]}",
-            "gridlayout-v7"      : "com.android.support:gridlayout-v7:${android["androidSupportSdkVersion"]}",
-            "constraint-layout"  : "com.android.support.constraint:constraint-layout:1.1.2",
+            "appcompat-v7"                      : "com.android.support:appcompat-v7:${android["androidSupportSdkVersion"]}",
+            "support-v4"                        : "com.android.support:support-v4:${android["androidSupportSdkVersion"]}",
+            "cardview-v7"                       : "com.android.support:cardview-v7:${android["androidSupportSdkVersion"]}",
+            "recyclerview-v7"                   : "com.android.support:recyclerview-v7:${android["androidSupportSdkVersion"]}",
+            "design"                            : "com.android.support:design:${android["androidSupportSdkVersion"]}",
+            "annotations"                       : "com.android.support:support-annotations:${android["androidSupportSdkVersion"]}",
+            "gridlayout-v7"                     : "com.android.support:gridlayout-v7:${android["androidSupportSdkVersion"]}",
+            "constraint-layout"                 : "com.android.support.constraint:constraint-layout:1.1.2",
+            "leanback"                          : "androidx.leanback:leanback:1.0.0",
+
+            /*************************Jetpack*************************/
+            // AndroidX: https://developer.android.google.cn/jetpack/androidx/versions
+            "androidx-appcompat"                : "androidx.appcompat:appcompat:1.1.0",
+            "androidx-support-v4"               : "androidx.legacy:legacy-support-v4:1.0.0",
+            "androidx-cardview"                 : "androidx.cardview:cardview:1.0.0",
+            "androidx-recyclerview"             : "androidx.recyclerview:recyclerview:1.0.0",
+            "androidx-annotations"              : "androidx.annotation:annotation:1.1.0",
+            "androidx-gridlayout"               : "androidx.gridlayout:gridlayout:1.0.0",
+            "androidx-constraintlayout"         : "androidx.constraintlayout:constraintlayout:1.1.3",
+            "androidx-navigation-fragment"      : "androidx.navigation:navigation-fragment:${android["navigationVersion"]}",
+            "androidx-navigation-ui"            : "androidx.navigation:navigation-ui:${android["navigationVersion"]}",
+            "androidx-lifecycle-extensions"     : "androidx.lifecycle:lifecycle-extensions:2.1.0",
+            "androidx-lifecycle-compiler"       : "androidx.lifecycle:lifecycle-compiler:2.1.0",
+            "androidx-lifecycle-reactivestreams": "androidx.lifecycle:lifecycle-reactivestreams:2.1.0",
+            "androidx-room-runtime"             : "androidx.room:room-runtime:2.1.0",
+            "androidx-room-rxjava2"             : "androidx.room:room-rxjava2:2.1.0",
+            "androidx-room-compiler"            : "androidx.room:room-compiler:2.1.0",
+            // https://github.com/material-components/material-components-android
+            "material"                          : "com.google.android.material:material:1.0.0",
 
             /*************************第三方依赖*************************/
             // https://github.com/square/retrofit
-            "retrofit2"          : "com.squareup.retrofit2:retrofit:2.4.0",
-            "converter-scalars"  : "com.squareup.retrofit2:converter-scalars:2.4.0",
-            "converter-gson"     : "com.squareup.retrofit2:converter-gson:2.4.0",
-            "adapter-rxjava"     : "com.squareup.retrofit2:adapter-rxjava:2.4.0",
-            "adapter-rxjava2"    : "com.squareup.retrofit2:adapter-rxjava2:2.4.0",
+            "retrofit2"                         : "com.squareup.retrofit2:retrofit:2.4.0",
+            "converter-scalars"                 : "com.squareup.retrofit2:converter-scalars:2.4.0",
+            "converter-gson"                    : "com.squareup.retrofit2:converter-gson:2.4.0",
+            "adapter-rxjava"                    : "com.squareup.retrofit2:adapter-rxjava:2.4.0",
+            "adapter-rxjava2"                   : "com.squareup.retrofit2:adapter-rxjava2:2.4.0",
             // https://github.com/square/okhttp
-            "okhttp"             : "com.squareup.okhttp3:okhttp:3.11.0",
+            "okhttp"                            : "com.squareup.okhttp3:okhttp:3.11.0",
             // https://github.com/greenrobot/greenDAO
-            "greendao"           : "org.greenrobot:greendao:3.2.2",
+            "greendao"                          : "org.greenrobot:greendao:3.2.2",
             // https://github.com/yuweiguocn/GreenDaoUpgradeHelper
-            "greendao-helper"    : "com.github.yuweiguocn:GreenDaoUpgradeHelper:v2.1.0",
+            "greendao-helper"                   : "com.github.yuweiguocn:GreenDaoUpgradeHelper:v2.1.0",
             // https://github.com/bumptech/glide
-            "glide"              : "com.github.bumptech.glide:glide:4.8.0",
+            "glide"                             : "com.github.bumptech.glide:glide:4.8.0",
             // https://github.com/square/picasso
-            "picasso"            : "com.squareup.picasso:picasso:2.71828",
+            "picasso"                           : "com.squareup.picasso:picasso:2.71828",
             // https://github.com/facebook/fresco
-            "fresco"             : "com.facebook.fresco:fresco:1.10.0",
+            "fresco"                            : "com.facebook.fresco:fresco:1.10.0",
             // https://github.com/greenrobot/EventBus
-            "eventbus"           : "org.greenrobot:eventbus:3.1.1",
+            "eventbus"                          : "org.greenrobot:eventbus:3.1.1",
             // https://github.com/BuglyDevTeam/Bugly-Android
-            "bugly"              : "com.tencent.bugly:crashreport:2.6.6.1",
-            "bugly-native"       : "com.tencent.bugly:nativecrashreport:3.3.1",
+            "bugly"                             : "com.tencent.bugly:crashreport:2.6.6.1",
+            "bugly-native"                      : "com.tencent.bugly:nativecrashreport:3.3.1",
             // https://bintray.com/android/android-utils/com.android.volley.volley
-            "volley"             : "com.android.volley:volley:1.1.1",
+            "volley"                            : "com.android.volley:volley:1.1.1",
             // https://github.com/ReactiveX/RxJava
-            "rxjava"             : "io.reactivex:rxjava:1.3.8",
-            "rxjava2"            : "io.reactivex.rxjava2:rxjava:2.2.3",
-            "rxandroid"          : "io.reactivex:rxandroid:2.1.0",
-            "rxandroid2"         : 'io.reactivex.rxjava2:rxandroid:2.1.0',
+            "rxjava"                            : "io.reactivex:rxjava:1.3.8",
+            "rxjava2"                           : "io.reactivex.rxjava2:rxjava:2.2.3",
+            "rxandroid"                         : "io.reactivex:rxandroid:2.1.0",
+            "rxandroid2"                        : 'io.reactivex.rxjava2:rxandroid:2.1.0',
             // https://github.com/JakeWharton/RxBinding
-            "rxbinding"          : 'com.jakewharton.rxbinding2:rxbinding:2.2.0',
+            "rxbinding"                         : 'com.jakewharton.rxbinding2:rxbinding:2.2.0',
             // https://github.com/google/gson
-            "gson"               : "com.google.code.gson:gson:2.8.5",
+            "gson"                              : "com.google.code.gson:gson:2.8.5",
             // https://github.com/alibaba/fastjson
-            "fastjson"           : "com.alibaba:fastjson:1.1.70.android",
+            "fastjson"                          : "com.alibaba:fastjson:1.1.70.android",
             // https://github.com/apache/commons-lang
-            "commons-lang3"      : "org.apache.commons:commons-lang3:3.8",
+            "commons-lang3"                     : "org.apache.commons:commons-lang3:3.8",
             // https://github.com/square/leakcanary
-            "leakcanary"         : "com.squareup.leakcanary:leakcanary-android:1.6.2",
-            "leakcanary-release" : "com.squareup.leakcanary:leakcanary-android-no-op:1.6.2",
-            "leakcanary-fragment": "com.squareup.leakcanary:leakcanary-support-fragment:1.6.2",
+            "leakcanary"                        : "com.squareup.leakcanary:leakcanary-android:1.6.2",
+            "leakcanary-release"                : "com.squareup.leakcanary:leakcanary-android-no-op:1.6.2",
+            "leakcanary-fragment"               : "com.squareup.leakcanary:leakcanary-support-fragment:1.6.2",
             // https://github.com/YoKeyword/Fragmentation
-            "fragmentation"      : "me.yokeyword:fragmentation:1.3.6",
+            "fragmentation"                     : "me.yokeyword:fragmentation:1.3.6",
             // https://github.com/airbnb/lottie-android，2.8.0+是为了兼容AndroidX，没有用到AndroidX，则使用版本2.7.0，否则莫名其妙会报错
-            "lottie"             : "com.airbnb.android:lottie:2.7.0",
+            "lottie"                            : "com.airbnb.android:lottie:2.7.0",
 
             /*************************个人依赖*************************/
             // https://github.com/VeiZhang/BaseToolsLibrary
-            "basetools"          : "com.excellence:basetools:1.2.6",
+            "basetools"                         : "com.excellence:basetools:1.2.6",
             // https://github.com/VeiZhang/Permission
-            "permission"         : "com.excellence:permission:1.0.1",
+            "permission"                        : "com.excellence:permission:1.0.1",
             // https://github.com/VeiZhang/RetrofitClient
-            "retrofit-client"    : "com.excellence:retrofit:1.0.5",
-            "retrofit-client2"   : "com.excellence.retrofit:retrofit2:2.0.0",
+            "retrofit-client"                   : "com.excellence:retrofit:1.0.5",
+            "retrofit-client2"                  : "com.excellence.retrofit:retrofit2:2.0.0",
             // https://github.com/VeiZhang/QSkinLoader
-            "skinloader"         : "com.excellence:skinloader:1.2.2",
+            "skinloader"                        : "com.excellence:skinloader:1.2.2",
             // https://github.com/VeiZhang/ToastKit
-            "toast"              : "com.excellence:toast:1.1.0",
+            "toast"                             : "com.excellence:toast:1.1.0",
             // https://github.com/VeiZhang/MailSender
-            "mailsender"         : "com.excellence:mailsender:1.0.0",
+            "mailsender"                        : "com.excellence:mailsender:1.0.0",
             // https://github.com/VeiZhang/Downloader
-            "downloader"         : "com.excellence:downloader:1.2.0",
+            "downloader"                        : "com.excellence:downloader:1.2.0",
             // https://github.com/VeiZhang/AppStatistics
-            "app-statistics"     : "com.excellence:app-statistics:1.0.1",
+            "app-statistics"                    : "com.excellence:app-statistics:1.0.1",
             // https://github.com/VeiZhang/AndroidExec
-            "exec"               : "com.excellence:exec:1.1.1",
+            "exec"                              : "com.excellence:exec:1.1.1",
             // https://github.com/VeiZhang/AndroidFFmpeg
-            "ffmpeg"             : "com.excellence:ffmpeg:1.1.0",
+            "ffmpeg"                            : "com.excellence:ffmpeg:1.1.0",
             // https://github.com/VeiZhang/ImageLoader
-            "imageloader"        : "com.excellence:imageloader:1.0.0",
-            "imageloader-fresco" : "com.excellence:imageloader-fresco:1.0.0",
-            "imageloader-picasso": "com.excellence:imageloader-picasso:1.0.0",
-            "imageloader-glide"  : "com.excellence:imageloader-glide:1.0.0"
+            "imageloader"                       : "com.excellence:imageloader:1.0.0",
+            "imageloader-fresco"                : "com.excellence:imageloader-fresco:1.0.0",
+            "imageloader-picasso"               : "com.excellence:imageloader-picasso:1.0.0",
+            "imageloader-glide"                 : "com.excellence:imageloader-glide:1.0.0"
     ]
 }
 
