--- a/basetoolslibrary/build.gradle
+++ b/basetoolslibrary/build.gradle
@@ -38,7 +38,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.12'
-    api libs["androidx-appcompat"]
+    implementation libs["androidx-appcompat"]
     implementation libs["leanback"]
 }
 
