--- a/tooldemo/application.gradle
+++ b/tooldemo/application.gradle
@@ -35,7 +35,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
-    compile libs["appcompat-v7"]
-    compile libs["recyclerview-v7"]
+    testImplementation 'junit:junit:4.12'
+    implementation libs["appcompat-v7"]
+    implementation libs["recyclerview-v7"]
+    implementation libs["androidx-appcompat"]
 }
