--- a/tooldemo/build.gradle
+++ b/tooldemo/build.gradle
@@ -14,4 +14,9 @@ dependencies {
     // implementation 'com.excellence:basetools:+'
     /**本地Library**/
     implementation project(':basetoolslibrary')
+
+    /** Github packages **/
+//    implementation('com.excellence:basetools:1.2.9-RC3') {
+//        changing = true
+//    }
 }
